# httpee

./: .gitignore  .gotospec  .tool-versions  404.html  Cargo.toml  README.md  completions.html  config.go  config_test.go  configuration.html  demo.tape  dist-workspace.toml  example.toml  gleam.toml  go.mod  go.sum  httpee.local.toml  httpee.toml  index.html  installation.html  main.go  manifest.toml  oranda.json  output.html  oxocarbon.css  print.html  request.go  searcher-c2a407aa.js  searchindex-cf37d1ae.js  sharing.html  template.go  template_test.go  templates.html  toc-38385d4e.js  toc.html  usage.html  utils.go  view.go
.github/workflows/: release.yml  test.yml  web.yml
docs/: book.toml
docs/src/: SUMMARY.md  completions.md  configuration.md  installation.md  introduction.md  output.md  sharing.md  templates.md  usage.md
example/: httpee.local.toml  httpee.toml  ping.toml  user_create.toml  user_show.toml
example/accounts/: create.toml
example/users/: create.toml  show.toml
src/: config.rs  curl.rs  errors.rs  highlight.rs  httpee.gleam  main.rs  spinner.rs  style.rs  template.rs
src/httpee/: template.gleam
src/httpee/commands/: list.gleam
