[package]
name = "httpee"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
syntect = "5"
minijinja = "2"
clap_complete = { version = "4", features = ["unstable-dynamic"] }
