[package]
name = "httpee"
version = "0.1.9"
edition = "2021"
description = "Run HTTP requests from TOML templates"
homepage = "https://github.com/gmartsenkov/httpee"
repository = "https://github.com/gmartsenkov/httpee"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
syntect = "5"
minijinja = "2"
clap_complete = { version = "4", features = ["unstable-dynamic"] }
owo-colors = { version = "4.3.0", features = ["supports-colors"] }
base64 = "0.22.1"
spinoff = "0.8.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
